updated spec and introduce postgresql and prisma model. migrated prisma model into postgresql
